# dnsix-resolver

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: build.yml
docker/: dnsix.openrc
docs/adr/: 0003-observability-dashboard.md  0004-local-blocklist.md
src/: acl.rs  blocklist.rs  config.rs  handler.rs  main.rs  metrics.rs  querylog.rs  upstream.rs  web.rs
src/synth/: cdn.rs  mod.rs  nat64.rs
zabbix/: README.md  template_dnsix.yaml
