[package]
name = "dnsix"
version = "0.1.0"
edition = "2021"

[dependencies]
hickory-server = "=0.25.2"
hickory-client = "=0.25.2"
hickory-proto = { version = "=0.25.2", features = ["tokio", "tls-ring", "webpki-roots"] }
moka = { version = "0.12", features = ["sync"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "test-util"] }
futures-util = "0.3"
socket2 = "0.5"

serde = { version = "1", features = ["derive"] }
toml = "0.8"

clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
